Fixed button group alignment.

--- a/modules/gui/frontend/src/widget/button.module.css
+++ b/modules/gui/frontend/src/widget/button.module.css
@@ -157,6 +157,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    align-items: center;
     margin: calc(var(--button-spacing) / -2);
 }
 
